--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 	  
 	<!-- <meta name="google-site-verification" content="u_--0s_Uw50r4zCgRrzltkmFhNCduYOJwPGlKVTuNJU" /> -->
 
-  <title>Wanjia Zhao 赵万佳</title>
-  <meta name="description" lang="en" content="This is an academic website for Wanjia Zhao">
-  <meta name="keywords" lang="en" content="Wanjia Zhao." />
+  <title>Qianyu Fan</title>
+  <meta name="description" lang="en" content="This is an academic website for Qianyu Fan">
+  <meta name="keywords" lang="en" content="Qianyu Fan." />
   
 
   <link rel="shortcut icon" href="images/icon/z.jpg">
