--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta name="keywords" lang="en" content="Qianyu Fan." />
   
 
-  <link rel="shortcut icon" href="images/icon/z.jpg">
+  <link rel="shortcut icon" href="images/icon/F.png">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="css/custom.css">
 
