--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <a class="page-link" href="#timeline"><b>Experiences</b></a>
     <a class="page-link" href="#publications"><b>Publications</b></a>
     <a class="page-link" href="#awards"><b>Honors & Awards</b></a>
-    <a class="page-link" href="#teaching"><b>Teaching </b></a>
-    <a class="page-link" href="#academicservices"><b>Academic Services </b></a>
+<!--     <a class="page-link" href="#teaching"><b>Teaching </b></a> -->
+<!--     <a class="page-link" href="#academicservices"><b>Academic Services </b></a> -->
     <a class="page-link" href="#misc"><b>Misc</b></a>
     <!--<a class="page-link" href="#otherprojects">Projects</a>-->
     <!-- Button for Posts -->
@@ -120,42 +120,41 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div id="profile-cover" class="cover shallow-bg img-responsive"> 
     <div id="profile-namecard" class="profile-wrapper wrapper-light">
       <div id="my-pic" class="profile-col profile-col-1">
-        <img id="profile-avatar" src="./images/self-portrait/me.jpg" alt="Me" class="circle-img border-dark"-/>
+        <img id="profile-avatar" src="./images/self-portrait/photo.jpg" alt="Me" class="circle-img border-dark"-/>
       </div>
       <div id="my-contact" class="profile-col profile-col-2">
         <div id="my-name" class="text-grey-dark">
-          Wanjia Zhao (赵万佳)<br>
+          Qianyu Fan<br>
         </div>
         <div id="my-title" class="text-grey">
           <!-- Undergrad at ZJU CKC Honors College -->
-          Math Undergrad @ ZJU 24'<br>
-          Incoming CS PHD Student @ Stanford<br>
+          Statistical Specialist, Economics Major, Math Minor @ UofT 25'<br>
         </div>
         <!-- <div id="my-email" class="text-grey-light">
-          wjzhao1203[at]gmail.com
+          qianyu.fan[at]mail.utoronto.ca
         </div> -->
         <div class="social-media">
-          <a href="https://scholar.google.com/citations?user=LUByMsoAAAAJ&hl=zh-CN" class="icon-button github">
+<!--           <a href="https://scholar.google.com/citations?user=LUByMsoAAAAJ&hl=zh-CN" class="icon-button github">
           <i class="ai ai-google-scholar-square icon-github"></i>
             <span></span>
-          </a>
+          </a> -->
 
-          <a href="https://github.com/wanjiaZhao1203" class="icon-button github">
+          <a href="https://github.com/RitatataVan" class="icon-button github">
             <i class="fa fa-github icon-github"></i>
             <span></span>
           </a>
 
-          <a href="https://www.linkedin.com/in/wanjia-zhao-299b13281/" class="icon-button linkedin">
+          <a href="https://www.linkedin.com/in/qianyu-fan/" class="icon-button linkedin">
             <i class="fa fa-linkedin icon-linkedin"></i>
             <span></span>
           </a>
           
-          <a href="https://twitter.com/WanjiaZhao1203" class="icon-button twitter">
+          <a href="https://twitter.com/fan_qianyu" class="icon-button twitter">
             <i class="fa fa-twitter icon-twitter"></i>
             <span></span>
           </a>
          
-          <a href="mailto:wanjiazh@stanford.edu" class="icon-button github">
+          <a href="mailto:qianyu.fan@mail.utoronto.ca" class="icon-button github">
             <i class="fa fa-envelope icon-github"></i>
             <span></span>
           </a>
