--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="bio-body" style="overflow:hidden;">
     <p>
       Hi, welcome to my page! I am a final year undergraduate student at the University of Toronto, studying statistics specialist, economics major and math minor. <br>
-      <br><br>
+      <br>
       My research interest broadly lies at the intersection of statistics, machine learning, finance and healthcare. I am driven by the belief that great innovation can arise from the intersection of different disciplines. <br>
+      <br>
       This summer I developed Acute Concussion Triage Avatar at <strong>UHN</strong>, a triage tool to be used to identify individuals in the acute and sub-acute stages post-concussion who are at high-risk for persisting symptoms and poor outcomes who should be referred to and seen in specialized concussion clinics. 
       Before that, I was a Data Science Intern at <strong>Moneris</strong>. 
       <br>
@@ -269,7 +270,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </tr> -->
         <tr>
           <td width="90%">
-              <strong>B.Sc.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2020 - Jun. 2025 <br>
+              <strong>B.Sc.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2020 - Jun. 2025 <br>
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>University of Toronto</b> , Toronto, Canada.<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  B.Sc.(Honors) in Statistics and Economics<br> 
           </td>
@@ -317,7 +318,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <tr>
           <td width="90%">
             <li>
-              <strong>Sep. 2023 -- Apr. 2024, Monerisa</strong>, Toronto, Canada<br>
+              <strong>Sep. 2023 -- Apr. 2024, Moneris</strong>, Toronto, Canada<br>
               &nbsp&nbsp&nbsp&nbsp <strong>Data Science Intern</strong>, Work on forecasting, prediction, and classification <br>
               
             </li>
