--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <p>
-      Hi, welcome to my page! I am a final year undergraduate student at the University of Toronto, studying statistics specialist, economics major and math minor. <br>
-      <br>
-      My research interest broadly lies at the intersection of statistics, machine learning, finance and healthcare. I am driven by the belief that great innovation can arise from the intersection of different disciplines. <br>
-      <br>
+      Hi, welcome to my page! I am a final year undergraduate student at the University of Toronto, studying statistics specialist, economics major and math minor.
+      <br><br>
+      My research interest broadly lies at the intersection of statistics, machine learning, finance and healthcare. I am driven by the belief that great innovation can arise from the intersection of different disciplines.
+      <br><br>
       This summer I developed Acute Concussion Triage Avatar at <strong>UHN</strong>, a triage tool to be used to identify individuals in the acute and sub-acute stages post-concussion who are at high-risk for persisting symptoms and poor outcomes who should be referred to and seen in specialized concussion clinics. 
       Before that, I was a Data Science Intern at <strong>Moneris</strong>. 
       <br>
@@ -270,8 +270,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </tr> -->
         <tr>
           <td width="90%">
-              <strong>B.Sc.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2020 - Jun. 2025 <br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>University of Toronto</b> , Toronto, Canada.<br>
+              <strong>B.Sc.</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Sep. 2020 - Jun. 2025 <br>
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>University of Toronto</b>, Toronto, Canada.<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  B.Sc.(Honors) in Statistics and Economics<br> 
           </td>
           <td width="10%">
