--- a/index.html
+++ b/index.html
@@ -429,25 +429,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="publications" class="publications">
   <h1 class="md-heading text-left">
     <i class="fa fa-file" aria-hidden="true"></i>
-    Publications and Manuscripts
+    Posters, Publications and Manuscripts
   </h1>
 
   <div class="pub-list">
 
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/TANGO.png">
+        <img class="intro-img frame" src="publications/Avatar Application Look.png">
       </div>
       <div class="pub-right">
         <div class="title">
-          Exploring Dimensionality Reduction of SDSS Spectral Abundances
+          Development of an Acute Concussion Triage Avatar (ACT-A): Leveraging LLM for Standardized Patient Summaries
         </div>
         <div class="desc">
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-            <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
-            <a class="author" href="">Joshua S. Speagle</a>
+            <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>
           </font>
           </span>
         </div>
@@ -459,16 +458,46 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="tags">
 <!--           [<a class="tag" href="https://arxiv.org/pdf/2310.06427.pdf"> <strong>Paper</strong></a>] -->
 <!--           [<a class="tag" href="https://arxiv.org/abs/2310.06427"><strong>www</strong></a>] -->
-          [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>]
+	  [<a class="tag" href="https://drive.google.com/file/d/1IPGqhQaAgI4uE_vZIVO2ZeldQoXEmaeg/view?usp=drive_link"><strong>Poster</strong></a>]
+          [<a class="tag" href="https://github.com/RitatataVan/3D-Triage-Avatar"><strong>Code</strong></a>]
+	  [<a class="tag" href="https://www.youtube.com/watch?v=9VOpDaNNoYM"><strong>Demo</strong></a>]
         </div>
-<!--         <b><span style="color: red;">Best Paper Award at DLDE workshop at Neurips 2023.</span></b> -->
+        <b><span style="color: red;">Presented for oral presentation and poster at T-CAIREM Conference, UHN Research Day and AIMed24 Conference.</span></b>
+      </div>
+    </div>
+
+    <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="publications/dimenredu.png">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+          Exploring Dimensionality Reduction of SDSS Spectral Abundances
+        </div>
+        <div class="desc">
+        </div>
+        <div class="authors">
+          <font style="font-size: 11pt;">
+             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
+            <a class="author" href="">Joshua S. Speagle</a>
+          </font>
+        </div>
+<!--         <div class="publish">
+          <span class="publisher">AAAI Conference on Artificial Intelligence (AAAI 2023)</span>
+          <span class="place"></span>
+        </div> -->
+        <div class="tags">
+<!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051/25823"> <strong>Paper</strong></a>] -->
+<!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
+	  [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>]
+        </div>
       </div>
     </div>
 
 
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/covpu.png">
+        <img class="intro-img frame" src="publications/detection.png">
       </div>
       <div class="pub-right">
         <div class="title">
@@ -479,7 +508,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="authors">
           <font style="font-size: 11pt;">
              <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
-            <a class="author" href=""> Pascal Tyrrell</a>
+            <a class="author" href="">Pascal Tyrrell</a>
           </font>
         </div>
 <!--         <div class="publish">
