--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                
           </td>
           <td width="10%">
-            <img src="images/icon/Moneris.jpg" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="images/icon/Moneris.png" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
           </td>
         </tr>
 
