--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>Personal Email:</li>
-          <li><a href="mailto:">Qianyu.Fan[at]mail.utoronto.ca</a></li>
+          <li><a href="mailto:">qianyu.fan[at]mail.utoronto.ca</a></li>
         </ul>
       </div>
 
