--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span class="place"></span>
         </div> -->
         <div class="tags">
-<!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051/25823"> <strong>Paper</strong></a>] -->
+          [<a class="tag" href="https://arxiv.org/abs/2409.05225"> <strong>Paper</strong></a>]
 <!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
 	  [<a class="tag" href="https://github.com/RitatataVan/HemarthrosisDetection"><strong>Code</strong></a>]
         </div>
