--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="trigger">
     <a class="page-link" href="#bio"><b>Biography</b></a>
     <a class="page-link" href="#timeline"><b>Education</b></a>
-    <a class="page-link" href="#timeline"><b>Experiences</b></a>
+    <a class="page-link" href="#timeline"><b>Internships</b></a>
+    <a class="page-link" href="#timeline"><b>Research</b></a>
     <a class="page-link" href="#publications"><b>Publications</b></a>
     <a class="page-link" href="#awards"><b>Honors & Awards</b></a>
 <!--     <a class="page-link" href="#teaching"><b>Teaching </b></a> -->
@@ -285,7 +286,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<div id="Experiences" class="bio">
+<div id="Internships" class="bio">
 
   <h1 class="md-heading text-left">
     <i class="fa fa-tasks" aria-hidden="true"></i>
@@ -334,6 +335,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <td></td>
           <td></td>
         </tr>
+
+	    
+	<tr>
+        <td width="90%">
+          <li>
+            <strong>Jun. 2022 -- Aug. 2022, China Reform Holdings (Guoxin Guotong Fund LLP) </strong>, Hangzhou, China<br>
+            &nbsp&nbsp&nbsp&nbsp <strong>Private Equity Investment Analyst Intern</strong>, Work on new energy analysis<br>
+            <!-- &nbsp&nbsp&nbsp&nbsp Supervisor: <a href=""> </a>  -->
+          </li>
+             
+        </td>
+        <td width="10%">
+          <img src="images/icon/uhn.png" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
+        </td>
+      </tr>
+
+
+      <tr style="height: 15px;">
+        <td></td>
+        <td></td>
+      </tr>
 
 
         <tr>
