--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <h1 class="md-heading text-left">
     <i class="fa fa-tasks" aria-hidden="true"></i>
-    Experiences
+    Internships
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <table>
@@ -381,7 +381,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <h1 class="md-heading text-left">
     <i class="fa fa-tasks" aria-hidden="true"></i>
-    Experiences
+    Research
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <table>
@@ -396,7 +396,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                
           </td>
           <td width="10%">
-            <img src="images/icon/HiveLab.jpg" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="images/icon/HiveLab.png" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
           </td>
         </tr>
 
@@ -415,7 +415,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                
           </td>
           <td width="10%">
-            <img src="images/icon/LeeLab.jpg" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="images/icon/LeeLab.png" width="80%" style="display: block; margin-left: auto; margin-right: auto;">
           </td>
         </tr>
 
