--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <br><br>
       This summer I developed Acute Concussion Triage Avatar at <strong>UHN</strong>, a triage tool to be used to identify individuals in the acute and sub-acute stages post-concussion who are at high-risk for persisting symptoms and poor outcomes who should be referred to and seen in specialized concussion clinics. 
       Before that, I was a Data Science Intern at <strong>Moneris</strong>. 
-      <br>
+      <br><br>
+      Additionally, I enjoy participating in various Kaggles and Datathon events! I'm currently a Kaggle Master with 1 gold, 3 silver, and 2 bronze medals.
     </p>
     <!-- <div style="width: 50%; float:left">
 			<h3>
@@ -299,8 +300,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <tr>
         <td width="90%">
           <li>
-            <strong>May. 2024 -- Aug. 2024, University Health Network </strong>, Toronto, Canada<br>
-            &nbsp&nbsp&nbsp&nbsp <strong>Research Intern / Full Stack Developer</strong>, Work on Triage Tool Development with LLM <br>
+            <strong>Oct. 2024 - Present, May. 2024 -- Aug. 2024, University Health Network </strong>, Toronto, Canada<br>
+            &nbsp&nbsp&nbsp&nbsp <strong>Generative AI Research Intern</strong>, Work on Triage Tool Development with LLM <br>
             <!-- &nbsp&nbsp&nbsp&nbsp Supervisor: <a href=""> </a>  -->
           </li>
              
@@ -549,7 +550,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           [<a class="tag" href="https://github.com/RitatataVan/3D-Triage-Avatar"><strong>Code</strong></a>]
 	  [<a class="tag" href="https://www.youtube.com/watch?v=9VOpDaNNoYM"><strong>Demo</strong></a>]
         </div>
-        <b><span style="color: red;">Presented for oral presentation and poster at T-CAIREM Conference, UHN Research Day and AIMed24 Conference.</span></b>
+        <b><span style="color: red;">Presented for oral presentation and poster at <br>
+		2024 18th Annual PQG Conference at Harvard, T-CAIREM Conference, UHN Research Day and AIMed24 Conference.</span></b>
       </div>
     </div>
 
@@ -566,7 +568,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="authors">
           <font style="font-size: 11pt;">
              <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
-            <a class="author" href="">Joshua S. Speagle</a>
+<!--             <a class="author" href="">Joshua S. Speagle</a> -->
           </font>
         </div>
 <!--         <div class="publish">
@@ -577,6 +579,68 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           [<a class="tag" href="http://arxiv.org/abs/2409.09227"> <strong>Paper</strong></a>]
 <!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
 	  [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>]
+        </div>
+      </div>
+    </div>
+
+    <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="publications/">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+          A Novel Algorithm for Credit Default Prediction using TabNet
+        </div>
+        <div class="desc">
+        </div>
+        <div class="authors">
+          <font style="font-size: 11pt;">
+	     <a class="author" href="">Mingtao Ma</a>,
+	     <a class="author" href="">Yi Yang</a>,
+	     <a class="author" href="">Yang Han</a>,
+	     <a class="author" href="">Xueyuan Deng</a>,
+             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
+	     <a class="author" href="">Yanjin Feng</a>
+          </font>
+        </div>
+        <div class="publish">
+          <span class="publisher"> 2024 IEEE International Conference on Bioinformatics and Biomedicine (BIBM) </span>
+          <span class="place"></span>
+        </div>
+        <div class="tags">
+<!--           [<a class="tag" href="https://ieeexplore.ieee.org/document/10435411"> <strong>Paper</strong></a>] -->
+<!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
+<!-- 	  [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>] -->
+        </div>
+      </div>
+    </div>
+
+    <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="publications/">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+          A Novel Algorithm for Credit Default Prediction using TabNet
+        </div>
+        <div class="desc">
+        </div>
+        <div class="authors">
+          <font style="font-size: 11pt;">
+             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
+             <a class="author" href="">Zhaowei Liu</a>,
+	     <a class="author" href="">Zhi Wang</a>,
+	     <a class="author" href="">Yeming Cai</a>,
+          </font>
+        </div>
+        <div class="publish">
+          <span class="publisher">2023 3rd International Conference on Electronic Information Engineering and Computer Science (EIECS)</span>
+          <span class="place"></span>
+        </div>
+        <div class="tags">
+          [<a class="tag" href="https://ieeexplore.ieee.org/document/10435411"> <strong>Paper</strong></a>]
+<!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
+<!-- 	  [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>] -->
         </div>
       </div>
     </div>
@@ -595,7 +659,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="authors">
           <font style="font-size: 11pt;">
              <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
-            <a class="author" href="">Pascal Tyrrell</a>
+<!--             <a class="author" href="">Pascal Tyrrell</a> -->
           </font>
         </div>
 <!--         <div class="publish">
