--- a/index.html
+++ b/index.html
@@ -557,39 +557,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/dimenredu.png">
+        <img class="intro-img frame" src="publications/BIBM.jpg">
       </div>
       <div class="pub-right">
         <div class="title">
-          Exploring Dimensionality Reduction of SDSS Spectral Abundances
-        </div>
-        <div class="desc">
-        </div>
-        <div class="authors">
-          <font style="font-size: 11pt;">
-             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
-<!--             <a class="author" href="">Joshua S. Speagle</a> -->
-          </font>
-        </div>
-<!--         <div class="publish">
-          <span class="publisher">AAAI Conference on Artificial Intelligence (AAAI 2023)</span>
-          <span class="place"></span>
-        </div> -->
-        <div class="tags">
-          [<a class="tag" href="http://arxiv.org/abs/2409.09227"> <strong>Paper</strong></a>]
-<!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
-	  [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>]
-        </div>
-      </div>
-    </div>
-
-    <div class="pub">
-      <div class="pub-left">
-        <img class="intro-img frame" src="publications/">
-      </div>
-      <div class="pub-right">
-        <div class="title">
-          A Novel Algorithm for Credit Default Prediction using TabNet
+          Integrating Advanced Language Models and Economic Incentives for Domain Adaptive Medical Data Stewardship
         </div>
         <div class="desc">
         </div>
@@ -617,7 +589,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="publications/">
+        <img class="intro-img frame" src="publications/TabNet.png">
       </div>
       <div class="pub-right">
         <div class="title">
@@ -645,6 +617,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
 
+    <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="publications/dimenredu.png">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+          Exploring Dimensionality Reduction of SDSS Spectral Abundances
+        </div>
+        <div class="desc">
+        </div>
+        <div class="authors">
+          <font style="font-size: 11pt;">
+             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
+<!--             <a class="author" href="">Joshua S. Speagle</a> -->
+          </font>
+        </div>
+<!--         <div class="publish">
+          <span class="publisher">AAAI Conference on Artificial Intelligence (AAAI 2023)</span>
+          <span class="place"></span>
+        </div> -->
+        <div class="tags">
+          [<a class="tag" href="http://arxiv.org/abs/2409.09227"> <strong>Paper</strong></a>]
+<!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
+	  [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>]
+        </div>
+      </div>
+    </div>
 
     <div class="pub">
       <div class="pub-left">
@@ -674,8 +673,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
 
-    
-
+	  
   </div>
 </div>
 </div>
