--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div id="awards" class="bio">
     <h1 class="md-heading text-left">
       <i class="fa fa-tasks" aria-hidden="true"></i>
-      Selected Honors & Awards
+      Honors & Awards
     </h1>
     <ul>
       <li> T-CAIREM Summer Research Award, 2024</li>
