--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
+             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>
 <!--             <a class="author" href="">Joshua S. Speagle</a> -->
           </font>
         </div>
@@ -657,7 +657,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="authors">
           <font style="font-size: 11pt;">
-             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
+             <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>
 <!--             <a class="author" href="">Pascal Tyrrell</a> -->
           </font>
         </div>
