--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
              <a class="author" href="https://RitatataVan.github.io/"><b>Qianyu Fan</b></a>,
              <a class="author" href="">Zhaowei Liu</a>,
 	     <a class="author" href="">Zhi Wang</a>,
-	     <a class="author" href="">Yeming Cai</a>,
+	     <a class="author" href="">Yeming Cai</a>
           </font>
         </div>
         <div class="publish">
