--- a/index.html
+++ b/index.html
@@ -390,14 +390,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<tr>
           <td width="90%">
             <li>
-              <strong>Jan. 2024 -- Present, HIVE Lab, UofT</strong>, Toronto, Canada<br>
-              &nbsp&nbsp&nbsp&nbsp <strong>Research Assistant</strong>, Work on stigma detection in diabetes through zero-shot learning<br>
-              &nbsp&nbsp&nbsp&nbsp Supervisor: <a href="https://www.hivelab-uoft.ca/team/zahra_shakeri">Prof. Zahra Shakeri</a><br>
+              <strong>Sep. 2024 -- Present, Kang Lee's Development Lab, UofT</strong>, Toronto, Canada<br>
+              &nbsp&nbsp&nbsp&nbsp <strong>Research Assistant</strong>, Work on depression using LLM<br>
+              &nbsp&nbsp&nbsp&nbsp Supervisor: <a href="https://kangleelab.com/">Prof. Kang Lee</a><br>
             </li>
                
           </td>
           <td width="10%">
-            <img src="images/icon/HiveLab.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="images/icon/LeeLab.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
           </td>
         </tr>
 
@@ -409,14 +409,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<tr>
           <td width="90%">
             <li>
-              <strong>Sep. 2024 -- Present, Kang Lee's Development Lab, UofT</strong>, Toronto, Canada<br>
-              &nbsp&nbsp&nbsp&nbsp <strong>Research Assistant</strong>, Work on depression using LLM<br>
-              &nbsp&nbsp&nbsp&nbsp Supervisor: <a href="https://kangleelab.com/">Prof. Kang Lee</a><br>
+              <strong>Jan. 2024 -- Present, HIVE Lab, UofT</strong>, Toronto, Canada<br>
+              &nbsp&nbsp&nbsp&nbsp <strong>Research Assistant</strong>, Work on stigma detection in diabetes through zero-shot learning<br>
+              &nbsp&nbsp&nbsp&nbsp Supervisor: <a href="https://www.hivelab-uoft.ca/team/zahra_shakeri">Prof. Zahra Shakeri</a><br>
             </li>
                
           </td>
           <td width="10%">
-            <img src="images/icon/LeeLab.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="images/icon/HiveLab.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
           </td>
         </tr>
 
@@ -612,7 +612,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="tags">
           [<a class="tag" href="https://ieeexplore.ieee.org/document/10435411"> <strong>Paper</strong></a>]
 <!--           [<a class="tag" href="https://ojs.aaai.org/index.php/AAAI/article/view/26051"><strong>www</strong></a>] -->
-<!-- 	  [<a class="tag" href="https://github.com/RitatataVan/DimenReduc"><strong>Code</strong></a>] -->
+	  [<a class="tag" href="https://github.com/RitatataVan/CreditDefaultPrediction"><strong>Code</strong></a>]
         </div>
       </div>
     </div>
