--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <td width="90%">
         <li>
           <strong>Feb. 2022 -- Jun. 2022, Sinolink Securities </strong>, Shanghai, China<br>
-          &nbsp&nbsp&nbsp&nbsp <strong>Research Intern, Hydrogen Team</strong>, Work on hydrogen analysis<br>
+          &nbsp&nbsp&nbsp&nbsp <strong>Data Analyst Intern, Hydrogen Team</strong>, Work on hydrogen analysis<br>
           <!-- &nbsp&nbsp&nbsp&nbsp Supervisor: <a href=""> </a>  -->
         </li>
              
